--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth2": "^0.2.0",
-    "passport-linkedin-oauth2": "^2.0.0",
+    "passport-linkedin-oauth2": "github:auth0/passport-linkedin-oauth2#v3.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
