--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "^5.20.0",
     "passport": "^0.7.0",
-    "passport-github2": "^0.1.12",
     "passport-google-oauth2": "^0.2.0",
     "passport-linkedin-oauth2": "github:auth0/passport-linkedin-oauth2#v3.0.0",
     "reflect-metadata": "^0.2.0",
@@ -50,6 +51,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
+    "prisma": "^5.20.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
